--- a/about.html
+++ b/about.html
@@ -2,7 +2,6 @@
 <head>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -12,17 +11,16 @@
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 <title>ഒ</title>
@@ -116,9 +114,6 @@ border: 1px dotted #e2d5d0;
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
 
-<!--
-tooooooooltip
--->
 <script src="https://file.pooftie.me/js/jquery.js"></script>
 
 <script>
@@ -259,7 +254,6 @@ attribute:"title"
 })(jQuery);
 
 </script>
-<!--tooltip!-->
 <style>
 .tooltip{
     display: inline;
@@ -280,9 +274,6 @@ z-index:9999;
 }
 </style>
 
-<!--
-menuuuuuuuuuuuuuuu
--->
 <html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -366,9 +357,6 @@ menuuuuuuuuuuuuuuu
 				<li><font color="#baada3">stay safe.. !</font></li>
 			</ul>
 		</div>
-<!--
-menuuuuuuuuuuuuuuu
--->
 
 </head>
 
@@ -537,11 +525,10 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div style="line-height:30px">
 
 <div id="spoiler1" class="spoiler-area is-closed" style="margin-top:2px;">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#bca6a0" style="font-size:9px; letter-spacing:0.5px;">( also known as puf )</font>
 
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+</div>
 <style>
 p { margin: 0; }
 .spoiler-area {
@@ -577,11 +564,10 @@ p { margin: 0; }
 </script>
 
 <div id="spoiler2" class="spoiler-area2 is-closed2" style="margin-top:-10px;">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#d6b3b3" style="font-size:9px; letter-spacing:0.5px;">( august . 11 . 1997 )</font>
 
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+</div>
 <style>
 p { margin: 0; }
 .spoiler-area2 {
@@ -617,11 +603,10 @@ p { margin: 0; }
 </script>
 
 <div id="spoiler3" class="spoiler-area3 is-closed3" style="margin-top:-10px;">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#bca6a0" style="font-size:9px; letter-spacing:0.5px;">( in the countryside of são paulo state )</font>
 
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+</div>
 <style>
 p { margin: 0; }
 .spoiler-area3 {
@@ -657,11 +642,9 @@ p { margin: 0; }
 </script>
 
 <div id="spoiler4" class="spoiler-area4 is-closed4" style="margin-top:-10px;">
-<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 
 <font color="#d6b3b3" style="font-size:9px; letter-spacing:0.5px;">( in a countryside small town )</font>
 
-</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
 p { margin: 0; }
 .spoiler-area4 {
@@ -724,7 +707,6 @@ i have lots of interests, i don't do things perfectly but i work hard to improve
 </body>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -734,17 +716,16 @@ i have lots of interests, i don't do things perfectly but i work hard to improve
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 </html>
