--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <head>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -12,17 +11,16 @@
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 <title>ഒ</title>
@@ -119,9 +117,6 @@ border: 1px dotted #e2d5d0;
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
 
-<!--
-tooooooooltip
--->
 <script src="https://file.pooftie.me/js/jquery.js"></script>
 
 <script>
@@ -262,7 +257,6 @@ attribute:"title"
 })(jQuery);
 
 </script>
-<!--tooltip!-->
 <style>
 .tooltip{
     display: inline;
@@ -283,9 +277,6 @@ z-index:9999;
 }
 </style>
 
-<!--
-menuuuuuuuuuuuuuuu
--->
 <html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -369,9 +360,6 @@ menuuuuuuuuuuuuuuu
 				<li><font color="#baada3">stay safe.. !</font></li>
 			</ul>
 		</div>
-<!--
-menuuuuuuuuuuuuuuu
--->
 
 </head>
 
@@ -567,15 +555,7 @@ important reminder :</font><br><br></div>
 
 
 <center>
-<!--eeee-->
 
-<html>
-<script language=JavaScript> 
-<!--
- 
-// --> 
-</script>
- 
 <style type="text/css"> 
 <!--BODY,TD,FONT{;
 } 
@@ -704,7 +684,6 @@ setTimeout("randomdisplay()",100)
 </body>
 </html>
 
-<!--oooo-->
 </center>
 <br><div id="indextext1">
 <font color="#c4ae9d">if you're feeling sad, please let me try to </font><a id="linkzinho" href="/help" style="text-decoration: none;"><font color="#e8c2c2">help</font></a></div>
@@ -720,7 +699,6 @@ setTimeout("randomdisplay()",100)
 </body>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -730,17 +708,16 @@ setTimeout("randomdisplay()",100)
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 </html>
