--- a/recommended.html
+++ b/recommended.html
@@ -2,7 +2,6 @@
 <head>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -12,17 +11,16 @@
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 <title>ഒ</title>
@@ -617,7 +615,6 @@ background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab
 </body>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -627,17 +624,16 @@ background-image:url(https://i.imgur.com/OwKs5M9.png); border: 0px solid #baaeab
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 </html>
