--- a/credits.html
+++ b/credits.html
@@ -2,7 +2,6 @@
 <head>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -12,17 +11,16 @@
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 <title>ഒ</title>
@@ -116,9 +114,6 @@ border: 1px dotted #e2d5d0;
 #linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
 #linkzinhoo { padding-bottom: 2px; border-bottom:1px dotted #e8c1c5; }</style>
 
-<!--
-tooooooooltip
--->
 <script src="https://file.pooftie.me/js/jquery.js"></script>
 
 <script>
@@ -259,7 +254,6 @@ attribute:"title"
 })(jQuery);
 
 </script>
-<!--tooltip!-->
 <style>
 .tooltip{
     display: inline;
@@ -279,10 +273,6 @@ color:#CEB6B6; /*tooltip font color*/
 z-index:9999;
 }
 </style>
-
-<!--
-menuuuuuuuuuuuuuuu
--->
 <html xmlns="https://www.w3.org/1999/xhtml">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -366,9 +356,6 @@ menuuuuuuuuuuuuuuu
 				<li><font color="#baada3">stay safe.. !</font></li>
 			</ul>
 		</div>
-<!--
-menuuuuuuuuuuuuuuu
--->
 
 </head>
 
@@ -620,7 +607,6 @@ it is recommended that you consult this page regularly in order to continually u
 </body>
 
 <!--
-
 　　　          ___   .--.
 　　　    .--.-"   "-' .- |
 　　　   / .-,`          .'   
@@ -630,17 +616,16 @@ it is recommended that you consult this page regularly in order to continually u
 　　　      \ 。            /.____　　　　　　　　　　　　　　　　　　♡.  
 　　　     /`-.          ,'.'    `\　　　　　　　　　　　　　　　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　  __/   \`-.____.-' `\      /　　　　　♡　。・゜      
-　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　♡　　　.　　　.♡ 
+　　　  | `---`'-'._/-`     \----'    _ 　　　　　　　　　　　 ♡　　　.　　　.♡ 
 　　　  |,-'`  /             |    _.-' `\　　　　. * ・        
 　　　 .'     /              |--'`     / |　　　　　　　　　　 ♡
 　　　/      /\              `         | |
-　　　|   .\/  \      .--. __          \ |　　　　　　　　　　　*.。middlepot.com 
-　　　 '-'      '._       /  `\         /　　　　　　　　　　　　　　　　　　　　　　　ଘ(*´ ˘ `*)ഒ 。.*
-　　　             `\    '     |------'`
+　　　|   .\/  \      .--. __          \ |　　　　　© middlepot.com  ꒰ ू´ ˘ ` ू ꒱
+　　　 '-'      '._       /  `\         /
+　　　             `\    '     |------'`　　　　。・゜　　　 ♡ ・ 。　　。・゜ ♡  
 　　　               \  |      |
-　　　                \        /
+　　　                \        /　　　　　 ♡　　　.　　　.♡              . * ・  ♡
  　　　                '._  _.'
-
 -->
 
 </html>
