--- a/blog.html
+++ b/blog.html
@@ -559,7 +559,8 @@ i hope life has been kind to you lately .. there are so many fun things that we 
 i am continuing with my slow daily routine, focusing on what i love to do, and doing my best not to let little stressful experiences fill me with anxiety again.
 having a healthy lifestyle is a neverending work in progress, but when i see myself in a happier place than i was yesterday, and imagining i can make even more happy memories tomorrow, makes everything worthwile <sub><sub>🎀</sub></sub>
 
-my main motivation for creating digital content has always been these small moments of happiness i find in my real lfe everyday activities, and in trying new things, so i have been full of ideas for little games & sites !
+my main inspiration when creating digital content has always been these small moments of happiness i find in my real life everyday activities, and in trying new things, so i have been full of ideas for little games & sites !
+( photography of items i have bought / made / renovated for my new home will continue to appear frequently in my projects visuals )
 
 recently, as i already have told you, i have been going outside for walks pretty often, and also having picnics, so me and bubu can eat out without spending much.
 i have always loved picnics, just everything about it : preparing & packing snacks at home, finding new picnic spots, decorating the place to make it comfy, then simply enjoying our time with a beautiful nature view, and a gentle breeze <sub><sub>🧺</sub></sub>
