--- a/recommended.html
+++ b/recommended.html
@@ -339,8 +339,13 @@ scroll down for webrings, cliques and buttons</font><br><br>
 <img src="https://i.imgur.com/WoYT1el.png"><br>
 <br><br>
 
+<sub><sub><a href="https://sugarpuff.neocities.org" target="_blank"><img src="https://i.imgur.com/cDxyw1b.png"></a></sub></sub>　
+<a href="https://cloverbell.neocities.org" target="_blank"><img src="https://i.imgur.com/SQroA39.gif"></a>　
+<a href="https://melokaji.neocities.org" target="_blank"><img src="https://i.imgur.com/AKfjHjc.gif"></a>　　
+
+<br>
 <a href="https://arunyi.art" target="_blank"><img src="https://i.imgur.com/PBz9jKp.gif"></a>　
-<a href="https://scrapbookofabisquedoll.blogspot.com" target="_blank"><img width="88px" height="45px" src="https://i.imgur.com/ZGtYXYn.png"></a>　
+<sub><sub><a href="https://scrapbookofabisquedoll.blogspot.com" target="_blank"><img width="88px" height="45px" src="https://i.imgur.com/ZGtYXYn.png"></a></sub></sub>　
 <a href="https://vampirevalentine.neocities.org" target="_blank"><img src="https://i.imgur.com/BvI8cVd.gif"></a>　　
 
 <br><br>
