--- a/index.html
+++ b/index.html
@@ -527,17 +527,17 @@ html{-webkit-text-size-adjust: 145%; text-size-adjust: 145%; line-height: 10px !
 <div style="line-height: 5px"><br></div>
 <div style="line-height: 10px"><center><sub><sub><img src="https://i.imgur.com/2Ntnpfr.gif"></sub></sub> ‌ <font color="#cfabab" style="font-size:10px;">updates</font> ‌ <sub><sub><img src="https://i.imgur.com/fy4LEng.gif"></sub></sub></center>
 <br></div><div id="updateitems">
-　 ‌ 07.31 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> links on: <a href="/recommended" style="text-decoration: none;"><font color="#DFB7B7">/recommended</font></a><br>
-　 ‌ 07.29 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> update on: <a href="/myfluffylife" style="text-decoration: none;"><font color="#DFB7B7">/myfluffylife</font></a><br>
-　 ‌ 07.29 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
-　 ‌ 07.20 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> materials on: <a href="/sozai" style="text-decoration: none;"><font color="#DFB7B7">/sozai</font></a><br>
-　 ‌ 07.18 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> music on: <a href="/care" style="text-decoration: none;"><font color="#DFB7B7">/care</font></a><br>
+　 ‌ 08.30 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> post on: <a href="/blog" style="text-decoration: none;"><font color="#DFB7B7">/blog</font></a><br>
+　 ‌ 08.27 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> page on: <a href="/dream" style="text-decoration: none;"><font color="#DFB7B7">/dream</font></a><br>
+　 ‌ 08.24 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> entry on: <a href="/status" style="text-decoration: none;"><font color="#DFB7B7">/status</font></a><br>
+　 ‌ 08.19 <sub><img src="https://i.imgur.com/hqVxKBX.png"></sub> update on: <a href="/gaming" style="text-decoration: none;"><font color="#DFB7B7">/gaming</font></a><br>
+　 ‌ 07.31 <sub><img src="https://i.imgur.com/0kEyEmA.png"></sub> links on: <a href="/recommended" style="text-decoration: none;"><font color="#DFB7B7">/recommended</font></a><br>
 </div></div>
 </center>
 
 <br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2023 . july . 31</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#b7a1a1"> 2023 . august . 30</font></font></font>
 <div style="line-height: 13px"><br><br></div>
 <div style="line-height: 10px">
 <font family = "Verdana"><font style="font-size:8px;"><font color="#ebc3c3" style="font-size:10px;">꒰ ‌</font><a id="linkzinho" href="/tips" style="text-decoration: none;"><font color="#b7a596"> send me a little tip </font></a><font color="#ebc3c3" style="font-size:10px;">‌ ꒱</font></font></font>
