--- a/blog.html
+++ b/blog.html
@@ -548,6 +548,127 @@ font-family: Verdana;
 <div id="coisinhos">
 
 
+<center><img src="https://middlepot.com/img/11.png"/></center><br><br>
+<font size = 1><font color="#CBBBB1">
+<center>august . 30 . 2023</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub>🎗</sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i feel like days have been passing by a little faster than usual ..
+but not in a bad way, you know ?
+it's as if time itself has become softer, lighter, and now is able to flow naturally, as it should. <sub><sub>🫖</sub></sub>
+
+i believe that's because i have been quieter, living in a gentle pace.. so, even though my life feels slower, the days in the calendar continue to fly by, and so does my past worries & fears, without paying much attention.
+with this routine i can find time to love and feel happy, and also thankful for what i have today.
+convalescense can be really difficult, as you have to balance between existing simply and continue working hard - and i noticed that the more you keep forcing things, the less you feel passionate about them..
+so, i'm constantly doing my best to kindly respect my spontaneous creativity, to keep creating heartfully, slowly but surely <sub><sub>🤍</sub></sub>
+
+i'm really grateful for having a flexible schedule that allows me to take care of my health, my home and my family, as utmost priority. this is what i have always hoped for .. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+living one day at a time has been very therapeutic. 
+
+
+by the way, it's such a pleasure to be here for another year !! <sub>🍰</sub>
+the <font color="#bfa8a8">middlepot.com</font> website just turned 6 years old recently, and i also had a lovely birthday myself, 26 years old.
+it is magical to be able to share my thoughts and creations with you fluffies, from all over the world, for so many consecutive years ..
+
+even though i have been less online recently, limiting myself to only use the internet for a few hours a day, and only for things that make my heart flutter with joy - i feel like i got all that wonder back, from when i was a child !
+the wide web is interesting again, full of nice things to explore. isn't that funny ?
+it's wonderful that i can do basically the same things i did back in the 2000s, but this time as a capable adult who knows how ( or at least tries ) to make my dream projects come true.
+i hope i can somehow be an inspiration for others too, just like others were ( and still are ) for me <sub><sub>🎀</sub></sub>
+
+very soon, by september, it will also be the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> game 2 years anniversary, and i will make some cute new items for the event !!
+i always feel happy whenever i see people playing - everyone is just so cute and kind to each other, it warms my heart & comforts my soul <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+i hope to be able to keep this precious little world alive forever. i mean it.
+even when i am unable to update it with new content, for whatever reasons, i want you fluffies to rest assured : i will always keep it working and well-kept, to the extent of my capacity ! 
+
+luckily, the monthly costs of maintenence aren't so high, since we keep almost everything running in our own server ( we're working towards complete autonomy ) i'm not afraid of being unable to pay for these fees, even if someday the game stops giving us a significant income.
+i am willing to pay from my own pocket whenever doable, and necessary, since keeping it accessible is important to me. <sub><sub>🖇</sub></sub>
+
+of course, having financial support from you fluffies is still extremely appreciated, so we can afford to put significant time & effort into the poofties projects.
+and this is especially important when it comes to interactive multiplayer online projects such as my fluffy life, where we also spend time moderating, helping players and fixing bugs.. !
+so having to pay to start playing, even if a small one-time cost, is essential to keep things secure, manageable, and sustainable.
+you fluffies have also supported us immensely over these years by purchasing items from the <a id="linkbjinho" href="https://shybunny.store" target="_blank">shy bunny store</a>, sending <a id="linkbjinho" href="https://middlepot.com/tips" target="_blank">tips</a>, and more ..
+oh, i couldn't thank you enough <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+nonetheless, as i have already said : all of this is a work of pure passion, a dream come true, things i created together with bubu .. just for the sake of it, you know ?
+a cute virtual world where people can relax, enjoy the simple things of life, and get to know others in a safe & comforting environment. 
+so it's not about numbers, profits, or productivity, it just.. is what it is, and this is what i love about it. there is no pressure, or expectations !
+if there are thousands of things happening, or hundreds, or "only" a few dozens - just the simple existence of these projects is a miracle, and reassuring enough for me to keep going.
+
+after all, work done under stress is doomed to burnout, and couldn't last many years .. that is why i want to make sure every little thing is made with love, patience and self-compassion.
+i will continue - slowly, and quietly. <sub>🐇</sub>
+
+
+
+okay, now, i would like to show you some things :
+i managed to finish organizing the <a id="linkbjinho" href="https://myfluffy.life/database" target="_blank">my fluffy life database</a> pages, and i love how it came out !</pre>
+<br><br>
+
+<center><a href="https://myfluffy.life/database" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/puHTz0k.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+there you can check the world areas in all of its different seasons & events, all the diffent kinds of items ( with many useful information ), the soundtracks, read the full length patchnotes, and more !
+hopefully, these pages can help many players to get to know a bit more about the game, and to find the items they are looking for <sub><sub>👜</sub></sub>
+
+it was quite hard to prepare this database, since there are so so many things to organize..
+woa, it really puts things into perspective .. i'm proud to see how much we have accomplished !!
+
+
+recently i have also made cute new items for the summer season !
+the content from last year is back ( check screenshots clicking <a id="linkbjinho" href="/archive/index#summer">here</a> ) with a new summer collection for the "rollcake store", new clothes for the temporary "pool party" laptop shop, new stickers, and furniture.
+here are some remarkable mentions :</pre>
+<br><br>
+
+<center><img width="auto" height="200px" src="https://i.imgur.com/Hvs7ht4.png">　
+<img width="auto" height="200px" src="https://i.imgur.com/lftRVTh.png"><br><br>
+<img width="auto" height="200px" src="https://i.imgur.com/1nEuImi.png"><br>
+</center>
+<br><br>
+<center><img width="420px" height="auto" src="https://i.imgur.com/0Z61KWc.png"><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+as you already know, i love including photos of things i have in real life in my projects, and of course my fluffy life isn'nt an exception - now i can have my current favorite dress in there, as well as my new curtains !!
+this is so much fun, heh <sub><sub>⭐</sub></sub>
+
+
+lastly, i would like to show you this cozy web page i made for the <a id="linkbjinho" href="https://dream.pooftie.me" target="_blank">dream directory</a>, the <a id="linkbjinho" href="https://dream.pooftie.me/candle" target="_blank">/candle</a> :</pre>
+<br><br>
+
+<center><a href="https://dream.pooftie.me/candle" target="_blank"><img width="430px" height="auto" src="https://i.imgur.com/lZqI0vA.gif"></a><br><br>
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+lately i have been quite into candles. they make my home cozier, i love the soft scents, and i especially love the crackling sounds of wooden wicks .. so i had the idea of making it an interactive experience <sub><sub>💻</sub></sub>
+sadly this virtual candle can't bring you warmth, but i hope it can still be soothing for when you need to relax <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+
+i think that's it for today's post ..
+thank you for being here with me, once more. one step at a time.
+
+
+xoxo <sub>💗</sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://middlepot.com/img/11.png"/></center><br>
+
+<br><br>
+
 <center><img src="https://middlepot.com/img/23.png"/></center><br><br>
 <font size = 1><font color="#CBBBB1">
 <center>may . 31 . 2023</center>
