--- a/blog.html
+++ b/blog.html
@@ -613,7 +613,7 @@ i managed to finish organizing the <a id="linkbjinho" href="https://myfluffy.lif
 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-there you can check the world areas in all of its different seasons & events, all the diffent kinds of items ( with many useful information ), the soundtracks, read the full length patchnotes, and more !
+there you can check the world areas in all of its different seasons & events, all the diffent kinds of items ( with many useful information ), download the soundtracks, read the full length patchnotes, and more !
 hopefully, these pages can help many players to get to know a bit more about the game, and to find the items they are looking for <sub><sub>👜</sub></sub>
 
 it was quite hard to prepare this database, since there are so so many things to organize..
