--- a/blog.html
+++ b/blog.html
@@ -637,7 +637,7 @@ here are some remarkable mentions :</pre>
 
 <font size = 1><font color="#B1A69E">
 <br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-as you already know, i love including photos of things i have in real life in my projects, and of course my fluffy life isn'nt an exception - now i can have my current favorite dress in there, as well as my new curtains !!
+as you already know, i love including photos of things i have in real life in my projects, and of course my fluffy life isn't an exception - now i can have my current favorite dress in there, as well as my new curtains !!
 this is so much fun, heh <sub><sub>⭐</sub></sub>
 
 
