--- a/blog.html
+++ b/blog.html
@@ -575,7 +575,7 @@ it is magical to be able to share my thoughts and creations with you fluffies, f
 even though i have been less online recently, limiting myself to only use the internet for a few hours a day, and only for things that make my heart flutter with joy - i feel like i got all that wonder back, from when i was a child !
 the wide web is interesting again, full of nice things to explore. isn't that funny ?
 it's wonderful that i can do basically the same things i did back in the 2000s, but this time as a capable adult who knows how ( or at least tries ) to make my dream projects come true.
-i hope i can somehow be an inspiration for others too, just like others were ( and still are ) for me <sub><sub>🎀</sub></sub>
+i hope i can, somehow, although offline for most of the time, still reach and be inspiring, in the same way others were ( and still are ) for me <sub><sub>🎀</sub></sub>
 
 very soon, by september, it will also be the <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> game 2 years anniversary, and i will make some cute new items for the event !!
 i always feel happy whenever i see people playing - everyone is just so cute and kind to each other, it warms my heart & comforts my soul <font color="#d3a5a5" style="font-size:11px;">♡</font>
