--- a/blog.html
+++ b/blog.html
@@ -572,7 +572,7 @@ by the way, it's such a pleasure to be here for another year !! <sub>🍰</sub>
 the <font color="#bfa8a8">middlepot.com</font> website just turned 6 years old recently, and i also had a lovely birthday myself, 26 years old.
 it is magical to be able to share my thoughts and creations with you fluffies, from all over the world, for so many consecutive years ..
 
-because i have been less online recently, limiting myself to only use the internet for 2~4 hours a day, only for things that make my heart flutter with joy, and no social media - i feel like i got all that wonder back, from when i was a child !
+because i have been less online since last year, limiting myself to only use the internet for 2~4 hours a day, only for things that make my heart flutter with joy, and no social media - i feel like i got all that wonder back, from when i was a child !
 the wide web is interesting again, full of nice things to explore. isn't that funny ?
 it's wonderful that i can do basically the same things i did back in the 2000s, but this time as a capable adult who knows how ( or at least tries ) to make my dream projects come true.
 so i hope to, besides offline for most of the time, continue reaching and being inspiring, in the same way others were ( and still are ) for me <sub><sub>🎀</sub></sub>
