--- a/faq.html
+++ b/faq.html
@@ -622,25 +622,24 @@ i like to use her name and variations a lot ! small and cute.<br><br>
 <font color="#B1A69E">
 　　　　　<font color="#91816b">𝓅𝓮𝓇𝓈𝓸𝓃𝒶𝓁𝒾𝓉𝓎 𝓉𝓇𝒶𝒾𝓉𝓈</font> ..<br>
 <br>
-<sub>🎗</sub>　i'm very shy & introverted. so, because of my introversion, i don't really feel bad for being shy, it's just part of me ;<br>
-<sub>🎗</sub>　i do my best to take care of others and myself. i want to bring comfort and safety to everyone !<br>
-<sub>🎗</sub>　i have huge difficulties in approaching and feeling comfortable with new people, sometimes even becoming close to people i know for a long time already ;<br>
+<sub>🎗</sub>　i'm very shy & introverted. because of my huge introversion, i don't struggle too much with my shyness, so i've long accepted that it is just part of who i am.<br>
+<sub>🎗</sub>　i do my best to take care of others and myself. i want to bring hope, solace, and quietude.<br>
+<sub>🎗</sub>　i have huge difficulties in approaching and feeling comfortable with new people, sometimes even becoming close to people i know for a long time already<br>
 <sub>🎗</sub>　when i am comfortable with people i randomly can talk a lot, sometimes even too much <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font><br>
-<sub>🎗</sub>　i'm always evaluating my behavior to improve myself, but sometimes i do take it too seriously, so i try to be spontaneous and follow my heart ;<br>
-<sub>🎗</sub>　i love rules ( if they are fair and i believe in them ) ! i love to make rules for myself because they are challenging and help me become a better person ;<br>
-<sub>🎗</sub>　i make lists all the time to be able to have an organized routine and take time to work on my projects, practice my hobbies, and rest properly. feeling busy with things that i like makes me feel pretty satisfied !<br>
-<sub>🎗</sub>　i think too much about everything, so i try to practice gratitude instead of feeling melancholic about things ;<br>
-<sub>🎗</sub>　i deeply value purity. for me purity is directly linked to your true personality, who you really are. i never forget who i am and what i believed and wanted from myself when i was a child and i want more than anything to be proud of myself, both the adult me and the child me from the past.<br>
+<sub>🎗</sub>　i'm always looking forward to improving myself, but sometimes i do take it too seriously, so i try to be spontaneous and follow my heart<br>
+<sub>🎗</sub>　i try my best to have an organized routine, for being able to take equal time to work on my projects, practice my hobbies, and rest properly. enjoying life in a slow, comfortable and quiet way is what keeps me going !<br>
+<sub>🎗</sub>　i think too much about everything, so i try to practice gratitude instead of feeling melancholic & anxious<br>
+<sub>🎗</sub>　i deeply value purity. to me, purity is about who you really are, and where your heart is. i never forget who i am, what i believed and wanted from myself when i was a child. i want more than anything to be proud of the adult i became, and make my dreams come true.<br>
 <br>
 　　　　　<font color="#91816b">𝓮𝓍𝓉𝓇𝒶</font> ..<br>
 <br>
-<sub>🎗</sub>　my sense of humor is quite childish, so i laugh at really silly things ;<br>
-<sub>🎗</sub>　i cry a lot, sad and happy ;<br>
-<sub>🎗</sub>　my main interest is beautiful things and to make things beautiful ;<br>
-<sub>🎗</sub>　i like everything that warms my heart and i try to fill my life with these things ;<br>
-<sub>🎗</sub>　my signature scent is vanilla + coconut ;<br>
-<sub>🎗</sub>　i love animals, especially babies, i love taking care of babies <font color="#d3a5a5" style="font-size:11px;">♡</font><br>
-<sub>🎗</sub>　i love nature, she is everything to me, i struggle daily to feel part of her and understand my instincts and role in life. this has made me extremely happy and helps me overcome any personal problems.<br>
+<sub>🎗</sub>　my sense of humor is quite childish, so i laugh at really silly things<br>
+<sub>🎗</sub>　i cry a lot, sad and happy<br>
+<sub>🎗</sub>　my main interest is beautiful things, and to make things beautiful<br>
+<sub>🎗</sub>　i try to fill my life with things that warm my heart, at all times<br>
+<sub>🎗</sub>　my signature scent is vanilla + coconut<br>
+<sub>🎗</sub>　i absolutely love all animals, but especially kittens <font color="#d3a5a5" style="font-size:11px;">♡</font><br>
+<sub>🎗</sub>　i love nature, she is everything to me, i strive daily to feel part of her, to understand my instincts and role in life. this has made me extremely happy and helps me overcome any personal problems.<br>
 <br><br><br>
 <b>edit //</b> some people asked me to post some things about my body as well. i thought a lot about it because it's very intimate and i don't like to post so many things like that ..<br>
 but i decided that i'll post, since these are information that anyone who knows me personally would know, there is nothing so secret about it :<br>
