--- a/faq.html
+++ b/faq.html
@@ -624,7 +624,7 @@ i like to use her name and variations a lot ! small and cute.<br><br>
 <br>
 <sub>🎗</sub>　i'm very shy & introverted. because of my huge introversion, i don't struggle too much with my shyness, so i've long accepted that it is just part of who i am.<br>
 <sub>🎗</sub>　i do my best to take care of others and myself. i want to bring hope, solace, and quietude.<br>
-<sub>🎗</sub>　i have huge difficulties in approaching and feeling comfortable with people, becoming close to them .. i cherish the few kindred spirits i've encountered throughout my life, and at the same time, i find great joy in solitude.<br>
+<sub>🎗</sub>　i have huge difficulties in approaching and feeling comfortable with people, becoming close to them .. i cherish the few kindred spirits i've encountered throughout my life, but at the same time, i find great joy in solitude.<br>
 <sub>🎗</sub>　when i am comfortable with people i randomly can talk a lot, sometimes even too much <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font><br>
 <sub>🎗</sub>　i'm always looking forward to improving myself, but sometimes i do take it too seriously, so i try to be spontaneous and follow my heart. i never force things - i let them flow softly, naturally.<br>
 <sub>🎗</sub>　i try my best to have an organized routine, for being able to take equal time to work on my projects, practice my hobbies, and rest properly. enjoying life in a slow, comfortable and quiet pace is what keeps me going !<br>
