--- a/faq.html
+++ b/faq.html
@@ -767,9 +767,7 @@ i always check my inbox ( might take a long time to respond, but i read everythi
 <sub>🧷</sub> i am also open for <font color="#bfa8a8">real life pen pals</font> from all over the world. from small postcards to big envelopes filled with stuff, i love exchanging all sorts of things, especially stationery and handmade small items. <font color="#d3a5a5" style="font-size:11px;">♡</font>
 if interested, please let me know by email !
 
-<sub>🧷</sub> i respond to some <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> pupu mails too ( id : <font color="#bfa8a8">adm-puf</font> ) , but please don't ask for support in there, use the <a id="linkbjinho" href="https://myfluffy.life/contact" target="_blank">contact form</a> instead !!
-
-<sub>🧷</sub> in the future, you can expect to be able to interact with me on <font color="#bfa8a8">my puf cafe pages</font> as well, of course.</pre><br><br><br><br><br><br>
+<sub>🧷</sub> i respond to some <a id="linkbjinho" href="https://myfluffy.life" target="_blank">my fluffy life</a> pupu mails too ( id : <font color="#bfa8a8">adm-puf</font> ) , but please don't ask for support in there, use the <a id="linkbjinho" href="https://myfluffy.life/contact" target="_blank">contact form</a> instead !!</pre><br><br><br><br><br><br>
 </font>
 
 <a name="internet" id="internet"></a><br>
