--- a/recommended.html
+++ b/recommended.html
@@ -339,6 +339,10 @@ scroll down for webrings, cliques and buttons</font><br><br>
 <img src="https://i.imgur.com/WoYT1el.png"><br>
 <br><br>
 
+<a href="https://allyratworld.com/cafe/rose" target="_blank"><img src="https://i.imgur.com/h7phQ1m.png"></a>　
+<a href="https://maplebear.neocities.org" target="_blank"><img src="https://i.imgur.com/ZItR40R.png"></a>　　
+
+<br>
 <sub><sub><a href="https://sugarpuff.neocities.org" target="_blank"><img src="https://i.imgur.com/cDxyw1b.png"></a></sub></sub>　
 <a href="https://cloverbell.neocities.org" target="_blank"><img src="https://i.imgur.com/SQroA39.gif"></a>　
 <a href="https://melokaji.neocities.org" target="_blank"><img src="https://i.imgur.com/AKfjHjc.gif"></a>　　
