--- a/status.html
+++ b/status.html
@@ -537,6 +537,9 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 <div style="padding-left: 140px; padding-top: 68px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 310px; height: 170px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 8px;"><br>
 
+　<sub><img src="https://i.imgur.com/frgdxTH.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>09.28.23</sup></font> <font color="#c4b3b6">꒱</font>　find me under the fluffy duvet
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/uvnRWje.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>08.24.23</sup></font> <font color="#cfbec2">꒱</font>　curl up & take a good nap..
 
 <br><br><br>
@@ -562,9 +565,6 @@ html{-webkit-text-size-adjust: 150%; text-size-adjust: 150%;}
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/t1l6f1l.png"></sub>　<font color="#e3d3d6" style="border-bottom:1px dashed #ccbec1"><sup>10.08.22</sup></font> <font color="#cfbec2">꒱</font>　rest in peace, my grumpy little angel
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/frgdxTH.png"></sub>　<font color="#e0cace" style="border-bottom:1px dashed #ccbec1"><sup>10.04.22</sup></font> <font color="#c4b3b6">꒱</font>　under the fluffy duvet
 
 
 <br><br>
