--- a/about.html
+++ b/about.html
@@ -649,7 +649,7 @@ p { margin: 0; }
 <font color="#bca9a4">﻿﻿!! </font><font color="#8e7d7d">꒰</font><font color="#efcfc6">〃﻿﻿</font><font color="#8e7d7d">`ˆ´</font><font color="#efcfc6">〃﻿ </font><font color="#bca9a4">loud noises , mean people</font><br></center>
 <br>
 <br><br>
-<font color="#ceaaa9">my goal is to live a beautiful life + spread happiness & comfort ഒ</font><br>
+<font color="#ceaaa9">my goal is to live a beautiful life + spread happiness & comfort ♡</font><br>
 <font color="#a08e8d">
 i'm an artist, crafter & designer who finds joy in spending time creating cute multimedia content, and making dreams come true !<br>
 i have lots of interests, i don't do things perfectly but i try my best to help and inspire others through my works.. i aim to be the guardian angel that quietly guides good-hearted people to purity and innocence.<br></font>
